# mrobot

./: CMakeLists.txt  README.md  package.xml
config/: front_end.yaml  mapping.yaml
launch/: data_pretreat.launch  front_end.launch  mapping.launch
log/: mrobot_frame_front_end_node.INFO  mrobot_frame_front_end_node.cw-VLT-WX0.cw.log.INFO.20230920-212606.51950  mrobot_frame_front_end_node.cw-VLT-WX0.cw.log.INFO.20230920-212833.53102  mrobot_frame_front_end_node.cw-VLT-WX0.cw.log.INFO.20230920-212902.53973  mrobot_frame_front_end_node.cw-VLT-WX0.cw.log.INFO.20230920-213035.54981  mrobot_frame_front_end_node.cw-VLT-WX0.cw.log.INFO.20230920-213137.56564  mrobot_frame_front_end_node.cw-VLT-WX0.cw.log.INFO.20230920-213501.58212  mrobot_frame_front_end_node.cw-VLT-WX0.cw.log.INFO.20230920-214030.60733  mrobot_frame_front_end_node.cw-VLT-WX0.cw.log.INFO.20230920-220528.92229  mrobot_frame_front_end_node.cw-VLT-WX0.cw.log.INFO.20230921-165302.545129  mrobot_frame_front_end_node.cw-VLT-WX0.cw.log.INFO.20230921-171928.581986  mrobot_frame_front_end_node.cw-VLT-WX0.cw.log.INFO.20230921-220824.8320  mrobot_frame_front_end_node.cw-VLT-WX0.cw.log.INFO.20230925-101935.71569  mrobot_frame_front_end_node.cw-VLT-WX0.cw.log.INFO.20230925-102312.74724  mrobot_frame_front_end_node.cw-VLT-WX0.cw.log.INFO.20230925-102552.77088  mrobot_frame_front_end_node.cw-VLT-WX0.cw.log.INFO.20230925-102724.78707  mrobot_frame_front_end_node.cw-VLT-WX0.cw.log.INFO.20230925-110402.95792  mrobot_frame_front_end_node.cw-VLT-WX0.cw.log.INFO.20230925-110626.97772  mrobot_frame_front_end_node.cw-VLT-WX0.cw.log.INFO.20230925-111301.100255  mrobot_frame_front_end_node.cw-VLT-WX0.cw.log.INFO.20230926-103219.26548  mrobot_frame_front_end_node.cw-VLT-WX0.cw.log.INFO.20230926-105847.43656  mrobot_frame_front_end_node.cw-VLT-WX0.cw.log.INFO.20230926-110919.45480  (+5 more)
msg/: keyframemsg.msg
rviz/: data_pretreat.rviz  front_end.rviz  (+1 more)
(+40 files in other folders)
